--- a/yon_auction/public/admin.html
+++ b/yon_auction/public/admin.html
@@ -50,22 +50,19 @@
         <!-- 관리자 컨트롤 -->
         <div class="card">
           <h3 class="card-title">⚙️ 경매 컨트롤</h3>
-          <div class="grid grid-4" style="gap: 10px;">
+          <div class="grid grid-3" style="gap: 10px;">
             <button id="btnStart" class="btn btn-success btn-lg">▶️ 시작</button>
             <button id="btnPause" class="btn btn-warning btn-lg">⏸️ 일시정지</button>
             <button id="btnEnd" class="btn btn-danger btn-lg">⏹️ 강제 종료</button>
-            <button id="btnNext" class="btn btn-primary btn-lg">⏭️ 다음 선수</button>
           </div>
-          <div class="grid grid-3 mt-20" style="gap: 10px;">
-            <button id="btnExtend10" class="btn btn-sm">+10초</button>
-            <button id="btnExtend30" class="btn btn-sm">+30초</button>
+          <div class="grid grid-1 mt-20" style="gap: 10px;">
             <button id="btnReset" class="btn btn-danger btn-sm">🔄 DB 리셋</button>
           </div>
         </div>
 
-        <!-- 강제 배정 -->
+        <!-- 관리자 배정 -->
         <div class="card">
-          <h3 class="card-title">👑 선수 강제 배정</h3>
+          <h3 class="card-title">👑 관리자 배정 (포인트 전액)</h3>
           <div style="display: flex; gap: 10px; align-items: flex-end; flex-wrap: wrap;">
             <div style="flex: 2; min-width: 150px;">
               <label style="display: block; margin-bottom: 5px; color: #B9BBBE; font-size: 0.9rem;">선수</label>
@@ -79,19 +76,15 @@
                 <option value="">팀 선택...</option>
               </select>
             </div>
-            <div style="flex: 1; min-width: 80px;">
-              <label style="display: block; margin-bottom: 5px; color: #B9BBBE; font-size: 0.9rem;">가격</label>
-              <input type="number" id="forcePrice" class="input" placeholder="0" min="0" style="width: 100%;">
-            </div>
             <button id="btnForceAssign" class="btn btn-warning" style="flex: 0;">배정</button>
           </div>
         </div>
 
-        <!-- 팀별 현황 -->
+        <!-- 전체 팀 로스터 -->
         <div class="card">
-          <h3 class="card-title">👥 팀 현황</h3>
-          <div id="teamList" class="grid grid-3">
-            <!-- 팀 카드가 여기에 동적으로 생성 -->
+          <h3 class="card-title">📊 전체 팀 로스터</h3>
+          <div id="adminAllRosters" class="queue-list" style="max-height: 320px; overflow-y: auto;">
+            <!-- 팀 로스터가 여기에 표시 -->
           </div>
         </div>
       </div>
@@ -120,6 +113,7 @@
             <!-- 최근 낙찰 결과 -->
           </div>
         </div>
+
       </div>
     </div>
   </div>
